# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.1.0] - 03/23/2022
### Added
- Basic project template: app script, setup files, env creation
- .gitlab-ci.yml

### Changed

### Removed