@@ -2,9 +2,16 @@
 NaaCL paper"""
 
 import itertools
-from typing import Dict, Iterable, Optional, Type
+from typing import Dict, Iterable, Optional, Type, Union
 
 from lxml import etree
+
+ENTITIES = 'entities'
+HEADING = 'heading'
+PARAGRAPHS = 'paragraphs'
+SENTENCES = 'sentences'
+TEXT = 'text'
+TOKENS = 'tokens'
 
 
 class CLAOIdCounter(object):
@@ -17,25 +24,28 @@ class CLAOIdCounter(object):
 
 
 class CLAOElement:
-    xml_element_name = 'element'
+    element_name = 'element'
 
     def __init__(self):
         """add docstring here"""
         self.id = CLAOIdCounter.get_id_for_class(self.__class__)
 
     @property
-    def xml_attrs(self) -> Dict[str, str]:
+    def serializable_attributes(self) -> Dict[str, str]:
         return {'id': str(self.id)}
+
+    def to_json(self) -> Dict:
+        return self.serializable_attributes
 
     def to_xml(self, parent: Optional[etree.Element]):
         if parent is None:
-            return etree.Element(self.xml_element_name, **self.xml_attrs)
+            return etree.Element(self.element_name, **self.serializable_attributes)
         else:
-            return etree.SubElement(parent, self.xml_element_name, **self.xml_attrs)
+            return etree.SubElement(parent, self.element_name, **self.serializable_attributes)
 
 
 class Span(CLAOElement):
-    xml_element_name = 'span'
+    element_name = 'span'
 
     def __init__(self, start: int, end: int):
         """add docstring here"""
@@ -44,15 +54,15 @@ class Span(CLAOElement):
         self.end = end
 
     @property
-    def xml_attrs(self) -> Dict[str, str]:
-        attrs = super(Span, self).xml_attrs
+    def serializable_attributes(self) -> Dict[str, str]:
+        attrs = super(Span, self).serializable_attributes
         attrs.update({'start': str(self.start),
                       'end': str(self.end)})
         return attrs
 
 
 class Token(Span):
-    xml_element_name = 'token'
+    element_name = 'token'
 
     def __init__(self, start: int, end: int, lemma: str, stem: str, pos: str, text: str):
         """add docstring here"""
@@ -63,12 +73,17 @@ class Token(Span):
         self.text = text
 
     @property
-    def xml_attrs(self) -> Dict[str, str]:
-        attrs = super(Token, self).xml_attrs
+    def serializable_attributes(self) -> Dict[str, str]:
+        attrs = super(Token, self).serializable_attributes
         attrs.update({'lemma': self.lemma,
                       'stem': self.stem,
                       'pos': self.pos})
         return attrs
+
+    def to_json(self) -> Dict:
+        json_dict = super(Token, self).to_json()
+        json_dict[TEXT] = self.text
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         token = super(Token, self).to_xml(parent)
@@ -77,12 +92,17 @@ class Token(Span):
 
 
 class Heading(Span):
-    xml_element_name = 'heading'
+    element_name = 'heading'
 
     def __init__(self, start: int, end: int, text: str):
         """add docstring here"""
         super(Heading, self).__init__(start, end)
         self.text = text
+
+    def to_json(self) -> Dict:
+        json_dict = super(Heading, self).to_json()
+        json_dict[TEXT] = self.text
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         heading = super(Heading, self).to_xml(parent)
@@ -91,7 +111,7 @@ class Heading(Span):
 
 
 class Entity(CLAOElement):
-    xml_element_name = 'entity'
+    element_name = 'entity'
 
     def __init__(self, tokens: Iterable[Token], entity_type: str, confidence: float, text: str):
         """add docstring here"""
@@ -102,13 +122,18 @@ class Entity(CLAOElement):
         self.text = text
 
     @property
-    def xml_attrs(self) -> Dict[str, str]:
-        attrs = super(Entity, self).xml_attrs
+    def serializable_attributes(self) -> Dict[str, str]:
+        attrs = super(Entity, self).serializable_attributes
         token_ids = [token.id for token in self.tokens]
         attrs.update({'tokens': str(token_ids),
                       'type': self.entity_type,
                       'confidence': str(self.confidence)})
         return attrs
+
+    def to_json(self) -> Dict:
+        json_dict = super(Entity, self).to_json()
+        json_dict[TEXT] = self.text
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         entity = super(Entity, self).to_xml(parent)
@@ -116,14 +141,20 @@ class Entity(CLAOElement):
         return entity
 
 
-class Sentence(CLAOElement):
-    xml_element_name = 'sentence'
+class Sentence(Span):
+    element_name = 'sentence'
 
     def __init__(self, entities: Iterable[Entity], tokens: Iterable[Token]):
         """add docstring here"""
         super(Sentence, self).__init__()
         self.entities = entities
         self.tokens = tokens
+
+    def to_json(self) -> Dict:
+        json_dict = super(Sentence, self).to_json()
+        json_dict[ENTITIES] = [e.to_json() for e in self.entities]
+        json_dict[TOKENS] = [t.to_json() for t in self.tokens]
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         sentence = super(Sentence, self).to_xml(parent)
@@ -135,12 +166,17 @@ class Sentence(CLAOElement):
 
 
 class Paragraph(CLAOElement):
-    xml_element_name = 'paragraph'
+    element_name = 'paragraph'
 
     def __init__(self, sentences: Iterable[Sentence]):
         """add docstring here"""
         super(Paragraph, self).__init__()
         self.sentences = sentences
+
+    def to_json(self) -> Dict:
+        json_dict = super(Paragraph, self).to_json()
+        json_dict[SENTENCES] = [s.to_json() for s in self.sentences]
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         paragraph = super(Paragraph, self).to_xml(parent)
@@ -150,7 +186,7 @@ class Paragraph(CLAOElement):
 
 
 class Section(Span):
-    xml_element_name = 'section'
+    element_name = 'section'
 
     def __init__(self, start: int, end: int, paragraphs: Iterable[Paragraph],
                  heading: Optional[Heading] = None):
@@ -158,6 +194,13 @@ class Section(Span):
         super(Section, self).__init__(start, end)
         self.paragraphs = paragraphs
         self.heading = heading
+
+    def to_json(self) -> Dict:
+        json_dict = super(Section, self).to_json()
+        if self.heading is not None:
+            json_dict[HEADING] = self.heading.to_json()
+        json_dict[PARAGRAPHS] = [p.to_json() for p in self.paragraphs]
+        return json_dict
 
     def to_xml(self, parent: etree.Element):
         section = super(Section, self).to_xml(parent)
@@ -169,19 +212,52 @@ class Section(Span):
 
 
 class Annotations(CLAOElement):
-    xml_element_name = 'annotation'
+    element_name = 'annotation'
 
-    def __init__(self, sections: Iterable[Section]):
+    def __init__(self, elements: Dict[str, Union[CLAOElement, Iterable[CLAOElement]]]):
         """add docstring here"""
         super(Annotations, self).__init__()
-        self.sections = sections
+        self.elements = elements
 
     @property
-    def xml_attrs(self) -> Dict[str, str]:
+    def serializable_attributes(self) -> Dict[str, str]:
         return {}
+
+    def to_json(self) -> Dict:
+        json_dict = super(Annotations, self).to_json()
+        for element_type, element_value in self.elements.items():
+            if isinstance(element_value, list):
+                json_dict[element_type] = [e.to_json() for e in element_value]
+            else:
+                json_dict.update(element_value.to_json())
+        return json_dict
 
     def to_xml(self) -> etree.Element:
         annotation = super(Annotations, self).to_xml(parent=None)
-        for section in self.sections:
-            section.to_xml(parent=annotation)
+        for element_type, element_list in self.elements.items():
+            for element in element_list:
+                element.to_xml(parent=annotation)
         return annotation
+
+
+class RawText(CLAOElement):
+    element_name = 'raw_text'
+
+    def __init__(self, rax_text: str):
+        """add docstring here"""
+        super(RawText, self).__init__()
+        self.raw_text = rax_text
+
+    @property
+    def serializable_attributes(self) -> Dict[str, str]:
+        return {}
+
+    def to_json(self) -> Dict:
+        json_dict = super(RawText, self).to_json()
+        json_dict['raw_text'] = self.raw_text
+        return json_dict
+
+    def to_xml(self, parent: Optional[etree.Element]):
+        raw_text = super(RawText, self).to_xml(parent)
+        raw_text.text = self.raw_text
+        return raw_text
