@@ -1,0 +1,4 @@
+defaults:
+  - ingestion: default
+  - analysis: default
+  - classification: default
