@@ -1,0 +1,2 @@
+input_dir: ../../../sample_docs
+data_type: text
