@@ -1,0 +1,2 @@
+CONFIG_FILE = "config.yaml"
+CONFIG_FILEPATH = "conf"
